# mida

./: .gitignore  .travis.yml  CHANGELOG.md  INSTALL.md  Mida.cabal  NEWS.md  README.md  index.html  install.sh  license.txt  mida.cabal  mida.css  mida.ebal  midarm  notice.txt  stack.yaml  uninstall.sh
doc/: index.html  mida.css  mida.texi
src/: Config.hs  Defaults.hs  Environment.hs  Eval.hs  Evaluator.hs  IO.hs  Interaction.hs  Main.hs  Mida.hs  MidaT.hs  Parser.hs  Translator.hs
src/Mida/: Config.hs  Configuration.hs  Environment.hs  Eval.hs  Interaction.hs  Language.hs  Midi.hs  Parser.hs  Representation.hs  Translator.hs
src/Mida/Interaction/: Base.hs  Commands.hs
src/Mida/Language/: Element.hs  Environment.hs  Eval.hs  SyntaxTree.hs
src/Mida/Representation/: Base.hs  Parser.hs  Show.hs
tests/: Main.hs
windows/: mida.iss
