-- -*- Mode: Haskell-Cabal; -*-
--
-- Cabal config for MIDA.
--
-- Copyright (c) 2014, 2015 Mark Karpov
--
-- MIDA is free software: you can redistribute it and/or modify it under the
-- terms of the GNU General Public License as published by the Free Software
-- Foundation, either version 3 of the License, or (at your option) any
-- later version.
--
-- MIDA is distributed in the hope that it will be useful, but WITHOUT ANY
-- WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-- FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
-- details.
--
-- You should have received a copy of the GNU General Public License along
-- with this program. If not, see <http://www.gnu.org/licenses/>.

name:                Mida
version:             0.4.0
synopsis:            scripting language for midi files generation
-- description:
homepage:            https://github.com/mrkkrp/mida
license:             GPL-3
license-file:        LICENSE.md
author:              Mark Karpov
maintainer:          Mark Karpov
copyright:           Copyright (c) 2014, 2015 Mark Karpov
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable mida
  main-is:             Main.hs
  other-modules:       Parser, Environment, Eval, Translator, Interaction,
                       Config, Main
  -- other-extensions:
  build-depends:       base                   >= 4.7 && <4.8,
                       parsec                 >= 3.1.7,
                       HCodecs                >= 0.5,
                       mersenne-random-pure64 >= 0.2.0.4,
                       mtl                    >= 2.1.3.1,
                       containers             >= 0.5.5.1,
                       optparse-applicative   >= 0.11.0.1,
                       filepath               >= 1.3.0.2,
                       directory              >= 1.2.1.0,
                       haskeline              >= 0.7.1.3,
                       process                >= 1.2.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
